# misc-cpp-oop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conandata.yml  requirements.txt
.github/workflows/: cp-cpp.yml
include/: delegatee.hpp  delegatee_impl1.hpp  delegator.hpp  fmt_helper.hpp  service.hpp  spdlog_helper.hpp
src/: catch2_helper.cpp  delegatee.cpp  delegatee_impl1.cpp  delegator.cpp  delegator_test.cpp  libfmt_helper.cpp  service.cpp  spdlog_helper.cpp  trompeloeil_test.cpp
